welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: not enough arguments for method reproduire: (j: Int, T: Array[java.awt.Color])Unit.
Unspecified value parameters j, T.
	reproduire();
                  ^Array1:13: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
	for(i<- 0 to getMondeHauteur()-1) {
             ^Array1:27: error: not found: value poseBrosse
	poseBrosse();
        ^Array1:30: error: reassignment to val
	j = j+1;
          ^